src/objects/Legal_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to complaint</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipName>Legal_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipName>Legal_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>New Judgement</fullName>
                    <isActive>false</isActive>
                    <label>New Judgement</label>
                </value>
                <value>
                    <fullName>Overturned</fullName>
                </value>
                <value>
                    <fullName>Partially Upheld</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                    <isActive>false</isActive>
                    <label>Rescheduled</label>
                </value>
                <value>
                    <fullName>Upheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Field is used in a DRE</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Occurred</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Hearing and Settlement</label>
    <listViews>
        <fullName>BAP_Queue_Legal_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>BAP Queue</label>
        <queue>BAP_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YY}-{MM}-{0000}-DOL</displayFormat>
        <label>Hearing and Settlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hearing and Settlement</pluralLabel>
    <recordTypes>
        <fullName>BAP_Hearing</fullName>
        <active>true</active>
        <description>BAP Hearing</description>
        <label>BAP Hearing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Board_Meeting</fullName>
        <active>true</active>
        <description>Board Meeting</description>
        <label>Board Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Formal_Hearing</fullName>
        <active>true</active>
        <description>Formal Hearing</description>
        <label>Formal Hearing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Hearing_Conference</fullName>
        <active>true</active>
        <description>Pre-Hearing Conference</description>
        <label>Pre-Hearing Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Settlement</fullName>
        <active>true</active>
        <description>Settlement</description>
        <label>Settlement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>